--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,11 @@
             <artifactId>log4j-api</artifactId>
             <version>2.8.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
+        </dependency>
         <!-- testing -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
